# movieSystem

./: .gitignore  Dockerfile  Documentação do Sistema de Recomendação de Filmes com Supabase e Gemini.docx  FuncoesExtracao.txt  README.md  chavesAPI.txt  cine-match-api.zip:Zone.Identifier  comentarios_ia.py  compose.yaml  docker-compose.yml  inserts_avaliacao.sql  perfilFilmes.sql  popularBanco.py  testebanco.py  utilizacao_ia.py
api/: Dockerfile  package-lock.json  package.json  tsconfig.json
api/prisma/: schema.prisma
api/src/: app.module.ts  main.ts
api/src/movies/: movies.controller.ts  movies.module.ts  movies.service.ts
app/: Dockerfile  main.py
backend/: Dockerfile  README.md  README_EMAIL_AUTH.md  db.sqlite3  env (3):Zone.Identifier  pyproject.toml  run.py  run_dev.py
backend/app/: config.py  factory.py  pyproject.toml
backend/app/auth/: __init__.py  email_auth.py  routes.py  sync.py
backend/app/sql/: chat_tables.sql  get_movies_in_list.sql
backend/app/v1/chat/: README.md  __init__.py  models.py  routes.py  service.py
backend/app/v1/communities/: routes.py
backend/app/v1/forum/: helper.py  routes.py  schemas.py
backend/app/v1/movielist/: email_routes.py  helper.py  routes.py  schemas.py
backend/app/v1/movies/: email_routes.py  helper.py  popular_movies.py  routes.py  schemas.py
backend/app/v1/profile/: routes.py
backend/app/v1/recomendations/: routes.py
backend/app/v1/social/: routes.py
backend/app/v1/user/: email_routes.py  helper.py  routes.py  schemas.py
backend/test/: README.md  conftest.py  requirements-test.txt  run_tests.py  setup.py  test_chat.py  test_firebase_sync.py  test_firebase_sync.py:Zone.Identifier  test_forum.py  test_movielist.py  test_movies.py  test_users.py
cinematch/: cinematch-interface.tsx  package-lock.json  package.json  tailwind.config.ts
cinematch/app/: page.tsx
cinematch/hooks/: use-mobile.tsx:Zone.Identifier
cinematch/src/app/: globals.css  layout.tsx
cinematch/src/components/: community-view.tsx  header.tsx  sidebar.tsx
frontend/: Dockerfile  README.md  compose.yaml  eslint.config.mjs  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ai-comments.tsx  chat-area.tsx  community-view.tsx  group-chat-view.tsx  header.tsx  markdown-renderer.tsx  movie-browser.tsx  movie-card.tsx  movie-list-actions.tsx  (+13 more)
ia-comentarios/: Dockerfile  main.py
ia-service/: Dockerfile  main.py  requirements.txt
(+59 files in other folders)
