[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Guarnier",email = "lucaszg090@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "oauth2 (>=1.9.0.post1,<2.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
